# openclaw-multi-agent-gamedev

./: .gitignore  LICENSE  README.md  _start_web.py  pyproject.toml  requirements.txt  verify_system.py
.codebuddy/agents/: 00_producer.md  01_pm.md  02_planner.md  03_tech_lead.md  04_programmer.md  05_artist.md  06_qa.md  07_ux.md
.codebuddy/rules/: rule.md
.codebuddy/skills/event-system/: SKILL.md
.codebuddy/skills/monobehaviour-patterns/: SKILL.md
.codebuddy/skills/null-safety/: SKILL.md
.codebuddy/skills/ui-toolkit-patterns/: SKILL.md
.codebuddy/skills/unity-test-framework/: SKILL.md
config/: agents.yaml  system.yaml
configs/: openclaw_team.json
configs/targets/: codebuddy-validation.json
docs/: plan.md  upgrade-plan-v2.md  upgrade-plan.md  开发方案.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: agent-config.ts  (+10 more)
rules/agents/: 00_制作人Agent.md  01_项目管理Agent.md  02_策划Agent.md  03_主程Agent.md  04_程序Agent.md  05_美术Agent.md  06_QAAgent.md  07_UXAgent.md
src/: __init__.py
src/adapters/: __init__.py  codebuddy_adapter.py  rule_loader.py
src/agents/: __init__.py  artist.py  base_agent.py  planner.py  producer.py  programmer.py  project_manager.py  qa.py  tech_lead.py  ux_designer.py
src/core/: __init__.py  context_manager.py  database.py  llm_adapter.py  message_queue.py  orchestrator.py  pipeline.py  sandbox.py
src/openclaw_team/: __init__.py  cli.py  demo.py
src/utils/: __init__.py  file_ops.py  logger.py
src/web/: __init__.py  app.py
(+45 files in other folders)
